--- a/LGMVIPTASK3.ipynb
+++ b/LGMVIPTASK3.ipynb
@@ -31,7 +31,7 @@
       "source": [
         "LetsGrowMore Virtual Internship Program ( Sep 2021 - Oct 2021 )\n",
         "\n",
-        "Author : Niraj Shaha\n",
+        "Author : Adinath Mahangare\n",
         "\n",
         "Task 3 : Exploratory Data Analysis on the Global Terrorism Dataset\n",
         "\n",
